# FasterTransformer

./: CMakeLists.txt
examples/cpp/gpt_service/: CMakeLists.txt  gpt_config.ini  gpt_service_example.cc  test_lora_gemm.cc
ext/: CMakeLists.txt
ext/base/: CMakeLists.txt  ustring.cc  ustring.h
ext/config/: CMakeLists.txt  model_config.cc  model_config.h
ext/lora/: CMakeLists.txt  lora_model.cc  lora_model.h  lora_weight.cc  lora_weight.h
ext/model_service/: CMakeLists.txt  model.h  model_service.cc  model_service.h  model_service_instance.cc  model_service_instance.h  model_task.h
ext/model_service/gpt/: CMakeLists.txt  gpt_model.h  gpt_service.cc  gpt_service.h  gpt_service_instance.cc  gpt_service_instance.h
ext/tokenizer/: CMakeLists.txt  basic_tokenizer.cc  basic_tokenizer.h  bert_tokenizer.cc  bert_tokenizer.h  bert_tokenizer_decoder.cc  bert_tokenizer_decoder.h  llama_tokenizer.cc  llama_tokenizer.h
ext/utils/: CMakeLists.txt  file_utils.cc  file_utils.h  spdlogger.cc  spdlogger.h  string_utils.cc  string_utils.h  time_utils.cc  time_utils.h
